# ckanext-auth

./: .gitignore  README.md  pyproject.toml  setup.cfg
.github/workflows/: test.yml
ckanext/auth/: cli.py  config.py  config_declaration.yaml  config_schema.yaml  exceptions.py  helpers.py  model.py  passkey.py  plugin.py  types.py  utils.py  views.py
ckanext/auth/assets/: webassets.yml
ckanext/auth/assets/js/: auth-login-form.js  auth-passkey-login.js  auth-passkey-manage.js  auth-passkey-register.js
ckanext/auth/logic/: action.py  schema.py
ckanext/auth/migration/auth/: env.py
ckanext/auth/migration/auth/versions/: 645822b5db95_add_auth_passkey_table.py  7917e1c52a37_init_2fa_user_totp_table.py
ckanext/auth/templates/auth/snippets/: 2fa_email.html
ckanext/auth/templates/user/: passkeys.html  read_base.html
ckanext/auth/templates/user/snippets/: login_form.html
ckanext/auth/tests/: conftest.py  test_helpers.py  test_mfa.py  test_model.py  test_passkey.py  test_utils.py
ckanext/auth/views/: __init__.py  auth_admin.py  mfa.py  passkey.py
